--- a/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
+++ b/my-app/src/app/clubs/TEC/ZeroOneCodeClub/page.css
@@ -216,8 +216,8 @@
 .Club-five-in {
   width: 90%;
   margin: auto;
-  padding: 4rem 0rem;
-  height: 50vh;
+  padding: 10rem 0rem;
+  /* height: 50vh; */
 }
 
 .Club-five-one {
@@ -295,10 +295,8 @@
   color: rgb(64, 63, 63);
 }
 
-.Club-four-three-in-one {
-  /* margin-top: 1rem; */
-}
 
+/* Activities boxes */
 .Club-four-three-in-one {
   display: flex;
   justify-content: space-between;
@@ -324,13 +322,53 @@
   font-size: 1.3rem;
   color: black;
   font-weight: 700;
+  padding-left: 0.6rem;
 }
 
 .Club-four-three-in-one-card-in-two p {
   font-size: 1rem;
   color: grey;
+  padding-left: 0.6rem;
 }
 
+/* Upcoming Boxes*/
+
+.Club-four-two-in-one {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Club-four-two-in-one-card {
+  width: 24%;
+  padding-bottom: 0.5rem;
+  border: 1px solid rgb(197, 195, 195);
+}
+
+.Club-four-two-in-one-card-in {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.Club-four-two-in-one-card-in-one img {
+  width: 100%;
+}
+
+.Club-four-two-in-one-card-in-two h2 {
+  font-size: 1.3rem;
+  color: black;
+  font-weight: 700;
+  padding-left: 0.6rem;
+}
+
+.Club-four-two-in-one-card-in-two p {
+  font-size: 1rem;
+  color: grey;
+  padding-left: 0.6rem;
+}
+
+
+/* ClubPage-six */
 
 .ClubPage-six {
   width: 100%;
