--- a/my-app/src/app/(pages)/admin/manageUsers/page.css
+++ b/my-app/src/app/(pages)/admin/manageUsers/page.css
@@ -1,28 +1,91 @@
-.ManageUsersComponent {
+.ManageUserComponent {
     width: 100%;
 }
 
-.ManageUsersComponent-in {
+.ManageUserComponent-in {
+    width: 100%;
+    padding: 1rem;
+    height: 83.5vh;
+}
+
+.ManageUser-one {
     width: 100%;
 }
 
-.ManageUsersComponent-Nav {
+.ManageUser-one-in {
     width: 100%;
 }
 
-.ManageUsersComponent-one {
+.ManageUser-one-in-one {
+    width: 100%;
+    padding: 1rem 0rem;
+}
+
+.ManageUser-one-in-one h1 {
+    font-size: 1rem;
+}
+
+
+.ManageUser-two {
     width: 100%;
 }
 
-.ManageUsersComponent-one-in {
+.ManageUser-two-in {
     width: 100%;
-    display: flex;
+    height: 72vh;
+    overflow: scroll;
 }
 
-.DC-sideBar {
-    width: 16%;
+.ManageUser-two-in table {
+    width: 100%;
+    border: 1px solid rgb(100 116 139 / 1);
+    border-collapse: collapse;
 }
 
-.DC-one {
-    width: 84%;
+.ManageUser-two-in table th, .ManageUser-two-in table td {
+    border: 1px solid rgb(100 116 139 / 1);
+    text-align: center;
+}
+
+.ManageUser-two-in table th {
+    color: black;
+    font-weight: 600;
+    padding: .8rem;
+}
+
+.ManageUser-two-in table td {
+    padding: .8rem;
+}
+
+.ManageUser-two-in table tbody tr:nth-child(odd) {
+    background-color: rgb(243, 244, 246)
+}
+
+.ManageUser-two-in table tr td:nth-child(1) {
+    width: 6%;
+}
+
+.ManageUser-two-in table td button {
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.HoldButton {
+    padding: .5rem 1rem;
+    background-color: #f0ad4e;
+}
+
+.ActivateButton {
+    padding: .5rem .5rem;
+    background-color: #5cb85c;
+}
+
+.DeleteButton {
+    color: #fff;
+    padding: .4rem .8em;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    background-color: #d9534f;
 }
