--- a/my-app/src/app/(pages)/admin/addClub/page.css
+++ b/my-app/src/app/(pages)/admin/addClub/page.css
@@ -18,13 +18,18 @@
 }
 
 .AddClubComponent-one {
-  padding: 0rem 2.5rem;
-  background-color: black;
   width: 100%;
-  justify-content: center;
+  background-color: black;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   color: white;
+  padding: .5rem;
+}
+
+.AddClubComponent-one h1 {
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .AddClubComponent-two {
@@ -89,7 +94,6 @@
 .AddClubComponent-two-in-two-c-one {
   width: 100%;
 }
-
 
 .AddClubComponent-two-in-two-d {
   width: 100%;
