Added css to side bar and few pages

--- a/my-app/src/app/(pages)/admin/clubUpdate/lead/page.css
+++ b/my-app/src/app/(pages)/admin/clubUpdate/lead/page.css
@@ -1,30 +1,81 @@
-
-
-.LeadUpdateComponent {
-    width: 100%;
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
 }
 
-.LeadUpdateComponent-in {
-    width: 100%;
-}
-
-.LeadUpdateComponent-Nav {
-    width: 100%;
-}
-
-.LeadUpdateComponent-one {
-    width: 100%;
-}
-
-.LeadUpdateComponent-one-in {
+.UpdateClubleadComponent{
     width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.LU-sideBar {
-    width: 16%;
+.UpdateClubLeadComponent-one{
+    width: 100%;
+    background-color: black;
+    color: white;
+    font-size: 10px;
+    padding: 6.4px;
 }
 
-.LU-one {
-    width: 84%;
+.UpdateClubLeadComponent-two{
+    width: 100%;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 0rem 2rem 2rem;
 }
+
+.UpdateClubLeadComponent-two-a{
+    width: 28.7%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.UpdateClubLeadComponent-two-a select{
+    width: 100%; 
+    padding: 0.8rem; 
+    border: 0.1px solid gray; 
+    border-radius: 5px;
+    font-size: 1rem; 
+    background-color: white; 
+    cursor: pointer;
+    appearance: none;
+}
+
+.UpdateClubLeadComponent-two-b, .UpdateClubLeadComponent-two-c{
+    display: flex;
+    padding-top: 1rem;
+    width: 100%;
+}
+
+.UpdateClubLeadComponent-two-b-box, .UpdateClubLeadComponent-two-c-box{
+    width: 32%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.UpdateClubLeadComponent-two-b input, .UpdateClubLeadComponent-two-c-box input{
+    width: 90%;
+    padding: 0.8rem;
+    border: 0.1px solid gray;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+.UpdateClubLeadComponent-two-c-button{
+    width: 15%;
+}
+.UpdateClubLeadComponent-two-c-button button {
+    width: 100%;
+    font-size: 1rem;
+    border-radius: 5px;
+    padding: 0.8rem; 
+    color: white;
+    background-color: green;
+    cursor: pointer;
+    border: none;
+  }
