--- a/my-app/src/app/(pages)/lead/images/page.css
+++ b/my-app/src/app/(pages)/lead/images/page.css
@@ -1,51 +1,57 @@
 *{
-    padding: 0%;
+    padding:0% ;
     margin: 0%;
     box-sizing: border-box;
 }
 
-.ImageComponent{
+.image-two-in{
+    width: 100%;
+}
+
+.image-two-in-one{
+    padding-left: 2rem;
+    padding-top: 1rem;
+}
+
+.image-two-in-one a{
+    text-decoration: none;
+    color: rgb(217, 3, 3);
+}
+.image-two-in-two{
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:flex-start;
+    gap: 1rem;
+    padding: 1rem 0rem 1rem 2rem;
+}
+
+.image-two-in-two-img{
+    width: 40%;
+    height: 100%;
+    /* background-color: yellowgreen; */
+}
+
+.image-two-in-two-img img{
     width: 100%;
 }
 
-.ImageComponent-in{
+.image-two-in-three{
     width: 100%;
+    padding-left: 59rem;
 }
 
-.Image-two{
-    width: 100%;
+.image-two-in-three button{
+  width: 32%;
+  font-size: 1rem;
+  border-radius: 5px;
+  padding: 0.8rem; 
+  color: white;
+  background-color: green;
+  cursor: pointer;
+  border: none;
 }
 
-.Image-two-in{
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-}
-
-.image-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    padding: 1rem;
-}
-
-.image-container img{
-    width: 30%;
-    height: 30%;
-}
-
-.Image-two-in button{
-    padding: .6rem;
-    width: 10%;
-    font-size: 18px;
-    color: white;
-    background-color: green;
-    border: none;
-    border-radius: .5rem;
+.image-two-in-three button:hover{
+  background-color: rgb(0, 147, 0);
 }
