--- a/my-app/src/app/(pages)/lead/images/page.css
+++ b/my-app/src/app/(pages)/lead/images/page.css
@@ -1,3 +1,4 @@
+
 *{
     padding:0% ;
     margin: 0%;
@@ -12,15 +13,11 @@
     padding: 1rem;
 }
 
-.image-two-in{
-    width: 100%;
-}
-
-.image-two-in-one{
+.image-one {
     width: 100%;  
 }
 
-.image-two-in-one-one {
+.image-one-in {
     width: 100%;
     display: flex;
 }
@@ -29,7 +26,12 @@
     font-size: 1.5rem;
 }
 
-.image-two-in-one-one p {
+.image-one-one {
+    width: 100%;
+    display: flex;
+}
+
+.image-one-one p {
     font-size: 1.2rem;
     display: flex;
     align-items: center;
@@ -40,30 +42,39 @@
     border-radius: 10px;
 }
 
-.image-two-in-one-two {
+.image-one-two {
     padding: .8rem .5rem;
 }
 
-.image-two-in-one-two-one {
+.image-one-two-one {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 
-.image-two-in-one-two-one p {
+.image-one-two-one p {
     font-size: 1rem;
 }
 
-.image-two-in-one a{
+.image-one a{
     text-decoration: none;
     color: rgb(217, 3, 3);
 }
-.image-two-in-two{
+
+.Image-three {
     width: 100%;
 }
 
-.image-two-in-two-in {
+.image-three-in {
+    width: 100%;
+}
+
+.image-three-in-two {
+    width: 100%;
+}
+
+.image-three-in-two-in {
     width: 100%;
     display: flex;
     align-items: center;
@@ -72,19 +83,19 @@
     padding: 1rem;
 }
 
-.image-two-in-two-img {
+.image-three-in-two-img {
     width: 50%;
     height: 100%;
 }
 
-.image-two-in-two-img img{
+.image-three-in-two-img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border: 1px solid rgb(202, 196, 196);
 }
 
-.image-two-in-three{
+.image-three-in-three{
     width: 100%;
     display: flex;
     align-items: center;
@@ -92,7 +103,7 @@
     padding: 0rem 1rem;
 }
 
-.image-two-in-three button{
+.image-three-in-three button{
   font-size: .8rem;
   border-radius: 5px;
   border: none;
@@ -102,6 +113,67 @@
   cursor: pointer;
 }
 
-.image-two-in-three button:hover{
+.image-three-in-three button:hover{
   background-color: rgb(0, 147, 0);
 }
+
+
+
+.image-two {
+    width: 100%;
+}
+
+.image-two-in {
+    width: 100%;
+}
+
+.image-two-in-one {
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    padding: 1rem 0rem;
+}
+
+.imageUpdate-one {
+    width: 50%;
+}
+
+.imageUpdate-two {
+    width: 50%;
+}
+
+.imageUpdate-one input {
+    width: 100%;
+    padding: 0.8rem;
+    border: 1px solid rgb(202, 196, 196);
+    border-radius: 5px;
+}
+
+.imageUpdate-two input {
+    width: 100%;
+    padding: 0.8rem;
+    border: 1px solid rgb(202, 196, 196);
+    border-radius: 5px;
+}
+
+.imageUpdate-three {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1rem;
+}
+
+.imageUpdate-three button{
+    font-size: .8rem;
+    border-radius: 5px;
+    border: none;
+    padding: 0.5rem 1rem; 
+    color: white;
+    background-color: black;
+    cursor: pointer;
+  }
+  
+  .imageUpdate-three button:hover{
+    background-color: rgb(0, 147, 0);
+  }
