--- a/my-app/src/app/(pages)/components/sidebar/page.css
+++ b/my-app/src/app/(pages)/components/sidebar/page.css
@@ -12,13 +12,13 @@
     width: 100%;
     height: 83.5vh;
     overflow: scroll;
+    background-color: rgb(34, 33, 33);
 }
 
 .SidebarComponent-in-in {
     width: 100%;
     height: fit-content;
 }
-
 
 .Sidebar-box {
     width: 100%;
