--- a/my-app/src/app/(pages)/lead/components/sidebar/page.css
+++ b/my-app/src/app/(pages)/lead/components/sidebar/page.css
@@ -12,6 +12,7 @@
     width: 100%;
     height: 83.5vh;
     overflow: scroll;
+    background-color: rgb(34, 33, 33);
 }
 
 .SidebarComponent-in-in {
@@ -54,4 +55,8 @@
 
 .Sidebar-item-with-sub {
     color: white;
+}
+
+.subOption {
+    padding-left: 2.5rem;
 }
