--- a/my-app/src/app/UI/news/page.css
+++ b/my-app/src/app/UI/news/page.css
@@ -21,7 +21,6 @@
   width: 50%;
   position: relative;
   background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  border: 2px solid black;
 }
 
 .seven-in-one-one .seven-in-one-one-box:first-child:before {
@@ -83,6 +82,8 @@
   .seven-in-one-one-box-in-one
   img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .seven-in-one-one
@@ -130,6 +131,7 @@
   img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .seven-in-one-one
