--- a/my-app/src/app/UI/events/page.css
+++ b/my-app/src/app/UI/events/page.css
@@ -20,6 +20,7 @@
 .eight-one-in {
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 1rem 0rem;
 }
