--- a/my-app/src/app/(pages)/lead/images/page.css
+++ b/my-app/src/app/(pages)/lead/images/page.css
@@ -38,7 +38,7 @@
     justify-content: flex-start;
     gap: .5rem;
     padding: .5rem 1rem;
-    border: 1px solid black;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     border-radius: 10px;
 }
 
@@ -51,10 +51,12 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    gap: .5rem;
 }
 
 .image-one-two-one p {
     font-size: 1rem;
+    padding: .2rem 0rem;
 }
 
 .image-one a{
@@ -85,7 +87,6 @@
 
 .image-three-in-two-img {
     width: 50%;
-    height: 100%;
 }
 
 .image-three-in-two-img img{
