--- a/my-app/src/app/(pages)/lead/images/page.css
+++ b/my-app/src/app/(pages)/lead/images/page.css
@@ -15,6 +15,10 @@
 
 .image-one {
     width: 100%;  
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .image-one-in {
@@ -32,14 +36,12 @@
 }
 
 .image-one-one p {
-    font-size: 1.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: .5rem;
-    padding: .5rem 1rem;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;    
 }
 
 .image-one-two {
